--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <p>Esta página es solo para ti... con música y todo 😘</p>
 
   <audio autoplay loop>
-    <source src="valentina.mp3" type="audio/mpeg">
-    Tu navegador no soporta audio 😥
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
   </audio>
 
 </body>
