--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <h1>Hola, mi muchachita linda 💖</h1>
   <p>Esta página es solo para ti... con música y todo 😘</p>
 
-  <audio autoplay loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
-  </audio>
-
-</body>
-</html><audio autoplay loop>
+  <audio <audio autoplay loop>
   <source src="valentina.mp3" type="audio/mpeg">
-</audio>
+  </audio>
+  
