--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <h1>Hola, mi muchachita linda 💖</h1>
   <p>Esta página es solo para ti... con música y todo 😘</p>
 
-  <audio <audio autoplay loop>
+  <button onclick="document.getElementById('audio').play()">🎵 Reproducir música</button>
+
+<audio id="audio" loop>
   <source src="valentina.mp3" type="audio/mpeg">
-  </audio>
+</audio>
   
