--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body style="text-align: center; font-family: sans-serif; background: pink;">
 
   <h1>Hola, mi muchachita linda 💖</h1>
-  <p>Esta página es solo para ti... con música y todo ,😘</p>
+  <p>Esta página es solo para ti... con música y todo... ,😘</p>
 
   <button onclick="document.getElementById('audio').play()">🎵 Reproducir música</button>
 
